# app/api_v1/api/persons.py
@@ -3,7 +3,7 @@ from __future__ import absolute_import, print_function
 
 from flask import request, g
 
-from app.libs.error_code import DeleteSuccess
+from app.libs.error_code import DeleteSuccess, ServerError
 from . import Resource
 from .. import schemas
 
@@ -12,6 +12,6 @@ class Persons(Resource):
 
     def get(self):
         print(g.args)
-        return DeleteSuccess()
+        return ServerError()
 
         # return {}, 200, None
