# app/models/base.py
@@ -7,7 +7,10 @@
 from contextlib import contextmanager
 from flask_sqlalchemy import SQLAlchemy as _SQLAlcmemy, BaseQuery
 from datetime import datetime
-from sqlalchemy import Column, SmallInteger, DateTime
+from sqlalchemy import Column, SmallInteger, Integer
+
+from app.libs.error_code import NotFound
+
 
 class SQLAlchemy(_SQLAlcmemy):
     @contextmanager
@@ -22,15 +25,36 @@ class SQLAlchemy(_SQLAlcmemy):
             self.session.close()
 
 
-db = SQLAlchemy()
+class Query(BaseQuery):
+
+    def filter_by(self, **kwargs):
+        if 'status' not in kwargs:
+            kwargs['status'] = 1
+        return super(Query, self).filter_by(**kwargs)
+
+    def get_or_404(self, ident):
+        rv = self.get(ident)
+        if not rv:
+            raise NotFound()
+        return rv
+
+    def first_or_404(self):
+        rv = self.first()
+        if not rv:
+            raise NotFound()
+        return rv
+
+
+db = SQLAlchemy(query_class=Query)
+
 
 class Base(db.Model):
     __abstract__ = True
-    create_time = Column(DateTime)
+    create_time = Column(Integer)
     status = Column(SmallInteger, default=1)
 
     def __init__(self):
-        self.create_time = datetime.now()
+        self.create_time = int(datetime.now().timestamp())
 
     def __getitem__(self, item):
         return getattr(self, item)
@@ -42,3 +66,10 @@ class Base(db.Model):
 
     def delete(self):
         self.status = 0
+
+    @property
+    def create_datetime(self):
+        if self.create_time:
+            return datetime.fromtimestamp(self.create_time)
+        else:
+            return None
